--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "@vue/compiler-sfc": "^3.2.47",
-        "axios": "^0.25",
+        "axios": "^0.25.0",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
@@ -19,7 +19,7 @@
         "vue-loader": "^17.0.1"
     },
     "dependencies": {
-        "bootstrap": "^5.2.3",
+        "bootstrap": "^5.3.0-alpha3",
         "jquery": "^3.6.4",
         "popper.js": "^1.16.1"
     }
