--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -11,10 +11,12 @@
     },
     "devDependencies": {
         "@vue/compiler-sfc": "^3.2.47",
+        "autoprefixer": "^10.4.14",
         "axios": "^0.25.0",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.24",
+        "tailwindcss": "^3.3.2",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1"
     },
