--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -7,9 +7,11 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "test:unit": "vitest --environment jsdom --root resources/"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^4.2.3",
         "@vue/compiler-sfc": "^3.2.47",
         "autoprefixer": "^10.4.14",
         "axios": "^0.25.0",
@@ -21,8 +23,12 @@
         "vue-loader": "^17.0.1"
     },
     "dependencies": {
+        "@vue/test-utils": "^2.3.2",
         "bootstrap": "^5.3.0-alpha3",
         "jquery": "^3.6.4",
-        "popper.js": "^1.16.1"
+        "laravel-vite-plugin": "^0.7.8",
+        "popper.js": "^1.16.1",
+        "start-server-and-test": "^2.0.0",
+        "vitest": "^0.32.2"
     }
 }
